# solana-transit-system

./: Anchor.toml  LICENSE  README.md  SUBSCRIPTION_IMPLEMENTATION.md  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
app/: app.css  root.tsx  routes.ts
app/components/: FareSelection.tsx  Header.tsx  PaymentHistory.tsx  SubscriptionManager.tsx  SubscriptionStatus.tsx  TransitFarePaymentApp.tsx  TreasuryBalance.tsx
app/routes/: docs.tsx  home.tsx
app/solana/: SolanaProvider.tsx  programId.ts  useProgram.ts
app/solana/client/: index.ts  pda.ts  rpc.ts
programs/transit_fare_payment/: Cargo.toml
programs/transit_fare_payment/bus_train_fare_payment/: Cargo.toml
programs/transit_fare_payment/bus_train_fare_payment/src/: constants.rs  error.rs  lib.rs
programs/transit_fare_payment/bus_train_fare_payment/src/instructions/: initialize_fare_config.rs  mod.rs  purchase_ticket.rs  refund_ticket.rs  update_fare_config.rs
programs/transit_fare_payment/bus_train_fare_payment/src/state/: fare_config.rs  mod.rs  passenger.rs  payment.rs  ticket.rs
programs/transit_fare_payment/src/: error.rs  lib.rs
programs/transit_fare_payment/src/instructions/: cancel_subscription.rs  initialize_fare_config.rs  mod.rs  purchase_subscription.rs  purchase_ticket.rs  record_payment.rs  refund_ticket.rs  update_fare_config.rs  use_subscription_ride.rs  use_ticket.rs
programs/transit_fare_payment/src/state/: fare_config.rs  mod.rs  passenger.rs  payment.rs  ticket.rs
tests/: transit_fare_payment.ts
